// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem render Non Highlighted bar 1`] = `
<MenuItem
  className="sidebar-item"
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        name="fire"
        size="large"
      />
    </span>
    <span>
      trending
    </span>
  </div>
</MenuItem>
`;

exports[`SideBarItem renders highlighted sideitem 1`] = `
<MenuItem
  className="sidebar-itemhighlight-item"
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        name="fire"
        size="large"
      />
    </span>
    <span>
      trending
    </span>
  </div>
</MenuItem>
`;

exports[`SideBarItem should render Sidebar 1`] = `
<MenuItem
  className="sidebar-item"
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span />
  </div>
</MenuItem>
`;
